--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 argcomplete==1.9.3
-attrs==17.4.0
+atomicwrites==1.1.5
+attrs==18.1.0
 certifi==2017.11.5
 chardet==3.0.4
 docker==2.7.0
 docker-pycreds==0.2.1
 dockerpty==0.4.1
 idna==2.6
+mock==2.0.0
+more-itertools==4.2.0
+pbr==4.0.4
+pkginfo==1.4.1
 pluggy==0.6.0
-py==1.5.2
-pytest==3.3.1
+py==1.5.3
+pytest==3.6.1
+pytest-mock==1.10.0
 requests==2.18.4
+requests-toolbelt==0.8.0
 six==1.11.0
+tqdm==4.19.5
+twine==1.9.1
 urllib3==1.22
 websocket-client==0.46.0
