Add Docker images for unit testing
Script to generate images with conflicting user id's and id's that are
guaranteed to not conflict with the current host (for testing).
These images will be used by unit tests to verify that changing user
id's in images works.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ python:
   - "3.6"
   - "nightly"
 script:
+  - ./docker/build_images.sh ./docker/
+  - git clean -xfd
   - pytest
 deploy:
   - provider: pypi
