--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,13 +9,13 @@ environment:
     - PYTHON: "3.11"
 
 install:
-  - . $HOME/venv${PYTHON}/bin/activate && python -m pip install --upgrade pip && python --version
+  - . $HOME/venv${PYTHON}/bin/activate && python -m pip install --upgrade pip build && python --version
 
 build_script:
-  - echo "build"
+  - . $HOME/venv${PYTHON}/bin/activate && python -m build
 
 test_script:
-  - echo "test"
+  - . $HOME/venv${PYTHON}/bin/activate && python -m pip install -r requirements.txt && pytest
 
 deploy_script:
   - echo "deploy"
