--- a/.github/workflows/python-package-main.yml
+++ b/.github/workflows/python-package-main.yml
@@ -48,11 +48,17 @@ jobs:
         #             using docker which conflcits with group ntp on alpine.
         sg runner_main  -c pytest
     - name: Deploy on release
-      if: startsWith(github.ref, 'refs/tags/')
+      if: |
+        startsWith(github.ref, 'refs/tags/') &&
+        matrix.python-version == '3.10'
       run: echo "this is a tag"
     - name: Main branch
-      if: github.ref == 'refs/heads/main'
+      if: |
+        github.ref == 'refs/heads/main' &&
+        matrix.python-version == '3.10'
       run: echo "this is main"
     - name: Test branch
-      if: github.ref == 'refs/heads/try-github-action'
+      if: |
+        github.ref == 'refs/heads/try-github-action' &&
+        matrix.python-version == '3.10'
       run: echo "this is try-github-action"
