--- a/.github/workflows/python-package-main.yml
+++ b/.github/workflows/python-package-main.yml
@@ -6,6 +6,10 @@ name: Build pipeline for docker-inside
 on:
   push:
 
+env:
+  # build the release on this version
+  PYTHON_RELEASE_VERSION: "3.10"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -64,12 +68,13 @@ jobs:
     - name: Deploy on release
       if: |
         startsWith(github.ref, 'refs/tags/') &&
-        matrix.python-version == '3.10'
+        matrix.python-version == env.PYTHON_RELEASE_VERSION &&
+        vars.DEPLOY_ON_GITHUB == 'true'
       run: echo "this is a tag"
     - name: Main branch
       if: |
         github.ref == 'refs/heads/main' &&
-        matrix.python-version == '3.10'
+        matrix.python-version == env.PYTHON_RELEASE_VERSION
       run: echo "this is main"
     - name: Test branch
       if: |
