--- a/.github/workflows/python-package-main.yml
+++ b/.github/workflows/python-package-main.yml
@@ -49,6 +49,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Build package for ${{ env.PYTHON_RELEASE_VERSION }}
+      if: matrix.python-version == env.PYTHON_RELEASE_VERSION
+      run: |
+        python -m pip install --upgrade pip build
+        python -m build
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
